<resources>
    <string name="app_name">SoccerHolic</string>
    <string name="search">Search</string>
    <string name="search_result">&lt;b>\'%1$s\'&lt;/b>에 대한 검색 결과 &lt;b>%2$d&lt;/b>건</string>
    <string name="loading">Loading</string>
    <string name="founded">&lt;b>Founded:&lt;/b> %1$d</string>
    <string name="country">&lt;b>Country:&lt;/b> %1$s</string>
    <string name="venue">&lt;b>Venue:&lt;/b> %1$s</string>
    <string name="team_logo">Team Logo</string>
    <string name="squad_info">Squad Info</string>
    <string name="player_number">No.%1$d</string>
    <string name="player_age">Age: %1$d</string>
    <string name="contents_provider">Contents provided by API-FOOTBALL</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="no_data">No Data Available</string>
    <string name="back">Back</string>
    <string name="statistics">Statistics</string>
    <string name="age">Age: %1$d</string>
    <string name="height">Height: %1$s</string>
    <string name="weight">Weight: %1$s</string>
    <string name="appearances">Appearances:</string>
    <string name="avg_rating">Avg. Rating:</string>
    <string name="passes">Passes</string>
    <string name="key_passes">Key Passes:</string>
    <string name="total">Total:</string>
    <string name="pass_accuracy">Pass Accuracy(%):</string>
    <string name="on_target">On Target:</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists:</string>
    <string name="bookmark">Bookmark</string>
    <string name="home">Home</string>
    <string name="fixtures">Fixtures</string>
</resources>