<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageLeagueLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:background="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textLeagueName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageLeagueLogo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Premier League" />

        <View
            android:id="@+id/border"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLeagueName" />

        <TextView
            android:id="@+id/textGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Games"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/border" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/appearances"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textGames" />

        <TextView
            android:id="@+id/textAppearances"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="17"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text1"
            app:layout_constraintTop_toTopOf="@+id/text1" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/avg_rating"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <TextView
            android:id="@+id/textRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            tools:text="6.9"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text2"
            app:layout_constraintTop_toTopOf="@+id/text2" />

        <TextView
            android:id="@+id/TextPasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/passes"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextPasses" />

        <TextView
            android:id="@+id/textTotalPasses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            tools:text="44"
            app:layout_constraintBottom_toBottomOf="@+id/text3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text3"
            app:layout_constraintTop_toTopOf="@+id/text3" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/key_passes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3" />

        <TextView
            android:id="@+id/textKeyPasses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text4"
            app:layout_constraintTop_toTopOf="@+id/text4"
            tools:text="1" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pass_accuracy"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text4" />

        <TextView
            android:id="@+id/textPassAccuracy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text5"
            app:layout_constraintTop_toTopOf="@+id/text5"
            tools:text="41" />

        <TextView
            android:id="@+id/textShots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Shots"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text5" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textShots" />

        <TextView
            android:id="@+id/textTotalShots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text6"
            app:layout_constraintTop_toTopOf="@+id/text6"
            tools:text="0" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/on_target"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text6" />

        <TextView
            android:id="@+id/textOnTargetShots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text7"
            app:layout_constraintTop_toTopOf="@+id/text7"
            tools:text="0" />

        <TextView
            android:id="@+id/textGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/goals"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text7" />

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textGoals" />

        <TextView
            android:id="@+id/textTotalGoals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text8"
            app:layout_constraintTop_toTopOf="@+id/text8"
            tools:text="0" />

        <TextView
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/assists"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text8" />

        <TextView
            android:id="@+id/textTotalAssists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/text9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text9"
            app:layout_constraintTop_toTopOf="@+id/text9"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>